<resources>
    <string name="app_name">CDEK</string>
    <string name="city_from">City from</string>
    <string name="city_to">City to</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="have_account">Have account?</string>
    <string name="truck">Truck</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>

    <string name="sent_requests">Sent</string>
    <string name="calculated_requests">Calculated</string>

    <string name="income_requests">Income</string>
    <string name="handled_requests">Handled</string>

    <string name="expecting_time">Expecting time:</string>
    <string name="total_cost">Total cost:</string>
    <string name="save">Save</string>
    <string name="add_another">Add one more</string>

    <string name="hours">%1$d hours</string>
    <string name="days">%1$d days</string>
    <string name="byn">%1$d BYN</string>

    <string name="error_empty_field">Field is empty!</string>
    <string name="error_auth">Authorization error!</string>
    <string name="error_registration">Registration error!</string>
    <string name="error_password_mismatch">Entered passwords mismatch!</string>
    <string name="error_user_already_exist">User with such username already exists!</string>
    <string name="error_request_not_found">Request not found</string>
    <string name="error_add_request">Adding request error!</string>
    <string name="error_empty_list">There are no available items.</string>
    <string name="press_to_choose_direction">Press to choose direction</string>
</resources>